Modificación de usuario con validaciones funcionando correctamente.